Added ai record support.

--- a/textfileApp/src/Makefile
+++ b/textfileApp/src/Makefile
@@ -17,6 +17,7 @@ LIBRARY_IOC += devTextFile
 DBD += devTextFile.dbd
 
 # specify all source files to be compiled and added to the library
+devTextFile_SRCS += devTextFileAi.c
 devTextFile_SRCS += devTextFileWf.c
 
 devTextFile_LIBS += $(EPICS_BASE_IOC_LIBS)
