--- a/src/Makefile
+++ b/src/Makefile
@@ -19,6 +19,7 @@ DBD += devTextFile.dbd
 # specify all source files to be compiled and added to the library
 devTextFile_SRCS += devTextFileLi.c
 devTextFile_SRCS += devTextFileAi.c
+devTextFile_SRCS += devTextFileSi.c
 devTextFile_SRCS += devTextFileWf.c
 
 devTextFile_LIBS += $(EPICS_BASE_IOC_LIBS)
