Struct dset and rset are revised in EPICS base R3.16.2  - Untyped ones are deprecated  - Defined USE_TYPED_RSET and/or USE_TYPED_DSET to used typed ones.

--- a/src/Makefile
+++ b/src/Makefile
@@ -8,6 +8,10 @@ include $(TOP)/configure/CONFIG
 #==================================================
 # build a support library
 
+#USR_CFLAGS += -Werror
+#USR_CFLAGS += -Wno-deprecated-declarations
+USR_CPPFLAGS += -DUSE_TYPED_RSET -DUSE_TYPED_DSET
+
 LIBRARY_IOC += devTextFile
 
 # xxxRecord.h will be created from xxxRecord.dbd
