Added option to read PV's initial value from the file. The initial value will be set during iocInit, even if it is an output record.

--- a/src/Makefile
+++ b/src/Makefile
@@ -25,6 +25,7 @@ devTextFile_SRCS += devTextFileLo.c
 devTextFile_SRCS += devTextFileAi.c
 devTextFile_SRCS += devTextFileSi.c
 devTextFile_SRCS += devTextFileWf.c
+devTextFile_SRCS += devTextFileRead.c
 
 devTextFile_LIBS += $(EPICS_BASE_IOC_LIBS)
 
